02-whoami/05-middleware.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: redirect-scheme
  namespace: hash-bang
spec:
  redirectScheme:
    scheme: https
    permanent: true
---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: strip-www-to-https
  namespace: hash-bang
spec:
  redirectRegex:
    regex: ^https?://(?:www\.)(.+)
    replacement: https://${1}
    permanent: true
---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: security-headers
  namespace: hash-bang
spec:
  headers:
    frameDeny: true               # the page can not be loaded in an iframe, Set frameDeny to true to add the X-Frame-Options header with the value of DENY.
    sslRedirect: true             # The sslRedirect only allow HTTPS requests when set to true.
    browserXssFilter: true        # Limit XSS, Set browserXssFilter to true to add the X-XSS-Protection header with the value 1; mode=block.
    contentTypeNosniff: true      # Do not detect Mime type by browser, Set contentTypeNosniff to true to add the X-Content-Type-Options header with the value nosniff.
    # stsIncludeSubdomains: true    # If the stsIncludeSubdomains is set to true, the includeSubDomains directive is appended to the Strict-Transport-Security header. all subdomains have to HSTS complained
    # stsPreload: true              # https://hstspreload.org/
    # stsSeconds: 31536000          # To be able to use HSTS Preloading, this parameter must be at least 31536000 second
