02-whoami/01-deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: whoami
  namespace: hash-bang
  labels:
    name: whoami
spec:
  replicas: 2
  selector:
    matchLabels:
      task: whoami
  template:
    metadata:
      labels:
        task: whoami
    spec:
      containers:
        - name: whoami
          image: traefik/traefikee-webapp-demo
          args:
            - -ascii
            - -name=#!.dev
          ports:
            - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: whoami
  namespace: hash-bang
spec:
  ports:
    - name: http
      port: 80
  selector:
    task: whoami
